[project]
name = "github-activity"
version = "0.1.0"
readme = "README.md"
description = "Simple CLI tool to fetch Github Activity"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]
authors = [
    {name = "Jafeth Garro", email = "jafeth636@gmail.com"}
]

[project.scripts]
github-activity = "github_activity:main"


[build-system]
requires = ["setuptools >=67.6.1", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

